Launchpad automatic translations update.

--- a/po/hr.po
+++ b/po/hr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2017-10-27 06:31+0000\n"
+"Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: hr\n"
 
@@ -881,6 +881,3 @@ msgstr ""
 #~ msgid "Invalid desktop files detected! Please see details"
 #~ msgstr ""
 #~ "Otkrivene su neispravne datoteke radne površine! Molim pogledajte pojedinosti"
-
-#~ msgid "Preview"
-#~ msgstr "Pogled"
