--- a/po/ja.po
+++ b/po/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: ub <xenolith0bytetestcomgreen@gmail.com>\n"
+"PO-Revision-Date: 2014-09-15 04:33+0000\n"
+"Last-Translator: Kiyotaka Nemoto <Unknown>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: ja\n"
 
@@ -1059,6 +1059,3 @@ msgstr ""
 
 #~ msgid "\"Terminal\": Whether the program runs in a terminal window."
 #~ msgstr "\"Terminal\": プログラムを端末を使って実行"
-
-#~ msgid "Preview"
-#~ msgstr "プレビュー"
