--- a/po/ms.po
+++ b/po/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2014-09-22 06:15+0000\n"
+"Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: ms\n"
 
@@ -1132,6 +1132,3 @@ msgstr ""
 #~ "maklumat lanjut bagaimana ia berfungsi. Aplikasi seharusnya melibatkan\n"
 #~ "Exec= lines dalam fail desktop mereka untuk keserasian dengan perlaksanaan\n"
 #~ "supaya dapat memahami kunci DBusActivatable."
-
-#~ msgid "Preview"
-#~ msgstr "Pratonton"
