--- a/po/ca.po
+++ b/po/ca.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2017-05-16 20:26+0000\n"
+"Last-Translator: toniem <toni.estevez@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:32+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: ca\n"
 
@@ -920,6 +920,3 @@ msgstr ""
 
 #~ msgid "Select an executable..."
 #~ msgstr "Seleccioneu un executable…"
-
-#~ msgid "Preview"
-#~ msgstr "Previsualització"
