--- a/po/cs.po
+++ b/po/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: k3dar7 <k3dar7@gmail.com>\n"
+"PO-Revision-Date: 2015-08-19 06:09+0000\n"
+"Last-Translator: Petr Šimáček <petr.simacek@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:32+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: cs\n"
 
@@ -934,6 +934,3 @@ msgstr ""
 
 #~ msgid "Browse Files..."
 #~ msgstr "Procházet soubory…"
-
-#~ msgid "Preview"
-#~ msgstr "Náhled"
