--- a/po/el.po
+++ b/po/el.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2015-08-19 11:16+0000\n"
+"Last-Translator: Lefteris Pavlou <lepa.22@hotmail.com>\n"
 "Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: el\n"
 
@@ -1108,6 +1108,3 @@ msgstr ""
 
 #~ msgid "If you don't save the launcher, all the changes will be lost.'"
 #~ msgstr "Εάν δεν αποθηκεύσετε τον εκκινητή, όλες οι αλλαγές θα χαθούν.'"
-
-#~ msgid "Preview"
-#~ msgstr "Προεπισκόπηση"
