--- a/po/en_AU.po
+++ b/po/en_AU.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Jackson Doak <noskcaj@ubuntu.com>\n"
+"PO-Revision-Date: 2014-02-10 23:30+0000\n"
+"Last-Translator: Jackson Doak <Doak.jackson@gmail.com>\n"
 "Language-Team: English (Australia) <en_AU@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: \n"
 
@@ -827,6 +827,3 @@ msgstr ""
 
 #~ msgid "<b>Options</b>"
 #~ msgstr "<b>Options</b>"
-
-#~ msgid "Preview"
-#~ msgstr "Preview"
