--- a/po/eu.po
+++ b/po/eu.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2014-09-03 19:42+0000\n"
+"Last-Translator: Ibai Oihanguren Sala <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:32+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -895,6 +895,3 @@ msgstr ""
 
 #~ msgid "Copyright © 2012-2014 Sean Davis"
 #~ msgstr "Copyright © 2012-2014 Sean Davis"
-
-#~ msgid "Preview"
-#~ msgstr "Aurrebista"
