--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2017-10-18 11:59+0000\n"
+"Last-Translator: marius DAVID <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -1124,6 +1124,3 @@ msgstr ""
 
 #~ msgid "Browse Files..."
 #~ msgstr "Parcourir les fichiers..."
-
-#~ msgid "Preview"
-#~ msgstr "Aperçu"
