--- a/po/ml.po
+++ b/po/ml.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2014-02-10 23:30+0000\n"
+"Last-Translator: STyM Alfazz <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: ml\n"
 
@@ -821,6 +821,3 @@ msgstr ""
 
 #~ msgid "<b>Preview</b>"
 #~ msgstr "<b>കണ്ടുനോക്കല്‍</b>"
-
-#~ msgid "Preview"
-#~ msgstr "കണ്ടുനോക്കല്‍"
