--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2016-05-13 13:30+0000\n"
+"Last-Translator: Felippe H D de Castro <fhd.castro@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: pt_BR\n"
 
@@ -881,6 +881,3 @@ msgstr ""
 
 #~ msgid "<small><i>Filename</i></small>"
 #~ msgstr "<small><i>Nome do arquivo</i></small>"
-
-#~ msgid "Preview"
-#~ msgstr "Pré-Visualização"
