--- a/po/ru.po
+++ b/po/ru.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2018-01-13 22:13-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2017-12-13 04:49+0000\n"
+"Last-Translator: ned <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-14 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-14 05:33+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: ru\n"
 
@@ -1211,6 +1211,3 @@ msgstr ""
 
 #~ msgid "Invalid desktop files detected! Please see details"
 #~ msgstr "Обнаружены некорректные значки запуска! Просмотрите подробности"
-
-#~ msgid "Preview"
-#~ msgstr "Предпросмотр"
