--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-14 15:52-0500\n"
+"POT-Creation-Date: 2018-01-15 17:14-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -333,9 +333,14 @@ msgid "Select an icon…"
 msgstr ""
 
 #. Translators: Button to cancel and leave a dialog.
-#: ../data/ui/MenulibreWindow.ui.h:116 ../menulibre/Dialogs.py:64
-#: ../menulibre/Dialogs.py:88 ../menulibre/Dialogs.py:105
-#: ../menulibre/Dialogs.py:130 ../menulibre/Dialogs.py:139
+#. Translators: Help Dialog, cancel button.
+#. Translators: Save On Close Dialog, don't save, cancel close.
+#. Translators: Save On Leave Dialog, don't save, cancel leave.
+#. Translators: Revert Dialog, cancel button.
+#. Translators: File Chooser Dialog, cancel button.
+#: ../data/ui/MenulibreWindow.ui.h:116 ../menulibre/Dialogs.py:65
+#: ../menulibre/Dialogs.py:100 ../menulibre/Dialogs.py:129
+#: ../menulibre/Dialogs.py:168 ../menulibre/Dialogs.py:188
 #: ../menulibre/MenulibreIconSelection.py:80
 msgid "Cancel"
 msgstr ""
@@ -363,105 +368,132 @@ msgid ""
 "Please investigate these problems with the associated package maintainer."
 msgstr ""
 
-#: ../menulibre/__init__.py:33
+#. Translators: Command line option to display debug messages on stdout
+#: ../menulibre/__init__.py:34
 msgid "Show debug messages"
 msgstr ""
 
-#. Populate the AboutDialog with all the relevant details.
-#: ../menulibre/Dialogs.py:38
+#. Translators: About Dialog, window title.
+#: ../menulibre/Dialogs.py:37
 msgid "About MenuLibre"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:41
-msgid "Copyright © 2012-2015 Sean Davis"
+#. Translators: Help Dialog, window title.
+#: ../menulibre/Dialogs.py:57
+msgid "Online Documentation"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:57
+#. Translators: Help Dialog, primary text.
+#: ../menulibre/Dialogs.py:59
 msgid "Do you want to read the MenuLibre manual online?"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:58
+#. Translators: Help Dialog, secondary text.
+#: ../menulibre/Dialogs.py:61
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:65
+#. Translators: Help Dialog, confirmation button. Navigates to
+#. online documentation.
+#: ../menulibre/Dialogs.py:68
 msgid "Read Online"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:66
-msgid "Online Documentation"
-msgstr ""
-
-#: ../menulibre/Dialogs.py:78
-msgid "Do you want to save the changes before closing?"
-msgstr ""
-
-#: ../menulibre/Dialogs.py:79 ../menulibre/Dialogs.py:96
-msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
-
-#: ../menulibre/Dialogs.py:86 ../menulibre/Dialogs.py:103
+#. Translators: Save On Close Dialog, window title.
+#. Translators: Save On Leave Dialog, window title.
+#: ../menulibre/Dialogs.py:90 ../menulibre/Dialogs.py:118
 msgid "Save Changes"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:87 ../menulibre/Dialogs.py:104
+#. Translators: Save On Close Dialog, primary text.
+#: ../menulibre/Dialogs.py:92
+msgid "Do you want to save the changes before closing?"
+msgstr ""
+
+#. Translators: Save On Close Dialog, secondary text.
+#. Translators: Save On Leave Dialog, primary text.
+#: ../menulibre/Dialogs.py:94 ../menulibre/Dialogs.py:123
+msgid "If you don't save the launcher, all the changes will be lost."
+msgstr ""
+
+#. Translators: Save On Close Dialog, don't save, then close.
+#. Translators: Save On Leave Dialog, don't save, then leave.
+#: ../menulibre/Dialogs.py:98 ../menulibre/Dialogs.py:127
 msgid "Don't Save"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:89 ../menulibre/Dialogs.py:106
+#. Translators: Save On Close Dialog, do save, then close.
+#. Translators: Save On Leave Dialog, do save, then leave.
+#: ../menulibre/Dialogs.py:102 ../menulibre/Dialogs.py:131
 #: ../menulibre/MenulibreApplication.py:355
 msgid "Save"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:94
+#. Translators: Save On Leave Dialog, primary text.
+#: ../menulibre/Dialogs.py:120
 msgid "Do you want to save the changes before leaving this launcher?"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:111
+#. Translations: Delete Dialog, secondary text. Notifies user that
+#. the file cannot be restored once deleted.
+#: ../menulibre/Dialogs.py:148
 msgid "This cannot be undone."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:121
+#. Translators: Revert Dialog, window title.
+#. Translators: Revert Dialog, confirmation button.
+#: ../menulibre/Dialogs.py:159 ../menulibre/Dialogs.py:170
+msgid "Restore Launcher"
+msgstr ""
+
+#. Translators: Revert Dialog, primary text. Confirmation to revert
+#. all changes since the last file save.
+#: ../menulibre/Dialogs.py:162
 msgid "Are you sure you want to restore this launcher?"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:122
+#. Translators: Revert Dialog, secondary text.
+#: ../menulibre/Dialogs.py:164
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:131 ../menulibre/Dialogs.py:132
-msgid "Restore Launcher"
-msgstr ""
-
-#: ../menulibre/Dialogs.py:140 ../menulibre/MenulibreIconSelection.py:81
+#. Translators: File Chooser Dialog, confirmation button.
+#: ../menulibre/Dialogs.py:190 ../menulibre/MenulibreIconSelection.py:81
 msgid "OK"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:145
+#. Translators: Launcher Removed Dialog, primary text. Indicates that
+#. the selected application is no longer installed.
+#: ../menulibre/Dialogs.py:197
 msgid "No Longer Installed"
 msgstr ""
 
-#: ../menulibre/Dialogs.py:146
+#. Translators: Launcher Removed Dialog, secondary text.
+#: ../menulibre/Dialogs.py:199
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:157
+#. Translators: Not Found In PATH Dialog, primary text. Indicates
+#. that the provided script was not found in any PATH directory.
+#: ../menulibre/Dialogs.py:213
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:170
+#. Translators: Save Error Dialog, primary text.
+#: ../menulibre/Dialogs.py:230
 #, python-format
 msgid "Failed to save \"%s\"."
 msgstr ""
 
-#: ../menulibre/Dialogs.py:172
+#. Translators: Save Error Dialog, secondary text.
+#: ../menulibre/Dialogs.py:233
 msgid "Do you have write permission to the file and directory?"
 msgstr ""
 
