--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-UNRELEASED, MenuLibre 2.1.4
+18 Jan 2018, MenuLibre 2.1.4
 
 - New Features:
   . Add button to test launchers without saving (LP: #1315875)
