--- a/po/da.po
+++ b/po/da.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2018-01-17 22:16+0000\n"
+"POT-Creation-Date: 2018-01-18 11:33+0000\n"
 "PO-Revision-Date: 2018-01-14 04:39+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-18 05:07+0000\n"
+"X-Launchpad-Export-Date: 2018-01-19 05:27+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: da\n"
 
@@ -424,12 +424,12 @@ msgstr "Vis fejlsøgningsmeddelelser"
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:38
 msgid "Use headerbar layout (client side decorations)"
-msgstr ""
+msgstr "Brug layout med hovedlinje (klientsidedekorationer)"
 
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:43
 msgid "Use toolbar layout (server side decorations)"
-msgstr ""
+msgstr "Brug layout med værktøjslinje (serversidedekorationer)"
 
 #. Translators: About Dialog, window title.
 #: ../menulibre/Dialogs.py:37
