--- a/po/fi.po
+++ b/po/fi.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-17 22:16+0000\n"
+"POT-Creation-Date: 2018-01-18 11:33+0000\n"
 "PO-Revision-Date: 2018-01-14 04:39+0000\n"
 "Last-Translator: Pasi Lallinaho <pasi@shimmerproject.org>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-18 05:07+0000\n"
+"X-Launchpad-Export-Date: 2018-01-19 05:27+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: fi\n"
 
@@ -77,7 +77,7 @@ msgstr "Palauta ennalleen"
 #. Translators: Toolbar button to test the currently selected item.
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Test Launcher"
-msgstr ""
+msgstr "Kokeile käynnistintä"
 
 #. Translators: Toolbar button to delete the currently selected item.
 #. Translators: Delete action tooltip
@@ -101,7 +101,7 @@ msgstr "Etsi"
 #. Translators: This error is displayed in a notice at the top of the application when one or more desktop files fails processing.
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Invalid desktop files detected! Please see details."
-msgstr ""
+msgstr "Virheellisiä käynnistintiedostoja havaittu! Katso lisätiedot."
 
 #. Translators: Treeview toolbar button to move the currently selected item up.
 #: ../data/ui/MenulibreWindow.ui.h:29
@@ -116,7 +116,7 @@ msgstr "Siirrä alas"
 #. Translators: Treeview toolbar button to sort the currently open submenu alphabetically.
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Sort Alphabetically"
-msgstr ""
+msgstr "Lajittele aakkosjärjestyksessä"
 
 #. Translators: Placeholder text/hint for the application name entry.
 #: ../data/ui/MenulibreWindow.ui.h:35
@@ -259,7 +259,7 @@ msgstr "Toteuta"
 #. Translators: Window title for the parsing error log dialog.
 #: ../data/ui/MenulibreWindow.ui.h:80
 msgid "Parsing Errors"
-msgstr ""
+msgstr "Tulkitsemisvirheet"
 
 #. Translators: This text is displayed in the Parsing Errors dialog and provides a basic summary of the errors reported.
 #: ../data/ui/MenulibreWindow.ui.h:82
@@ -268,6 +268,9 @@ msgid ""
 "and will therefore not show up in MenuLibre.\n"
 "Please investigate these problems with the associated package maintainer."
 msgstr ""
+"Seuraavien käynnistintiedostojen tulkitseminen on epäonnistunut, eikä niitä "
+"siksi näytetä MenuLibressä.\n"
+"Selvitä ongelmatilanne asiankuuluvan ohjelmistopaketin ylläpitäjän kanssa."
 
 #. Translators: Tooltip for the "GenericName" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:85
@@ -408,12 +411,12 @@ msgstr "DBus-aktivoitava"
 #. Translators: Tooltip for the "Implements" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:124
 msgid "A list of interfaces that this application implements."
-msgstr ""
+msgstr "Lista tämän sovelluksen rajapinnoista."
 
 #. Translators: "Implements" text entry. A list of interfaces that this application implements.
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Implements"
-msgstr ""
+msgstr "Rajapinnat"
 
 #. Translators: Command line option to display debug messages on stdout
 #: ../menulibre/__init__.py:34
@@ -423,12 +426,12 @@ msgstr "Näytä vianjäljitysviestit"
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:38
 msgid "Use headerbar layout (client side decorations)"
-msgstr ""
+msgstr "Käytä otsikkopalkkiasettelua (client side decorations)"
 
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:43
 msgid "Use toolbar layout (server side decorations)"
-msgstr ""
+msgstr "Käytä työkalupalkkiasettelua"
 
 #. Translators: About Dialog, window title.
 #: ../menulibre/Dialogs.py:37
@@ -540,18 +543,18 @@ msgstr ""
 #: ../menulibre/Dialogs.py:213
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr ""
+msgstr "\"%s\" ei löytynyt PATH-määrittelystä."
 
 #. Translators: Save Error Dialog, primary text.
 #: ../menulibre/Dialogs.py:231
 #, python-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "Kohteen \"%s\" tallentaminen epäonnistui."
 
 #. Translators: Save Error Dialog, secondary text.
 #: ../menulibre/Dialogs.py:234
 msgid "Do you have write permission to the file and directory?"
-msgstr ""
+msgstr "Onko sinulla kirjoitusoikeus tiedostoon ja hakemistoon?"
 
 #. Translators: Separator menu item
 #: ../menulibre/MenuEditor.py:91 ../menulibre/MenulibreApplication.py:1193
@@ -757,12 +760,12 @@ msgstr "_Palauta"
 #. Translators: Execute action label
 #: ../menulibre/MenulibreApplication.py:452
 msgid "_Execute"
-msgstr ""
+msgstr "_Suorita"
 
 #. Translators: Execute action tooltip
 #: ../menulibre/MenulibreApplication.py:454
 msgid "Execute Launcher"
-msgstr ""
+msgstr "Suorita käynnistin"
 
 #. Translators: Delete action label
 #: ../menulibre/MenulibreApplication.py:461
@@ -885,12 +888,12 @@ msgstr "Haluatko varmasti poistaa kohteen \"%s\"?"
 #. Translators: Menu item to open the Parsing Errors dialog.
 #: ../menulibre/MenulibreApplication.py:2193
 msgid "Parsing Error Log"
-msgstr ""
+msgstr "Tulkitsemisvirheloki"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreIconSelection.py:78
 msgid "Select an image…"
-msgstr ""
+msgstr "Valitse kuva..."
 
 #. Translators: "Images" file chooser dialog filter
 #: ../menulibre/MenulibreIconSelection.py:87
@@ -917,7 +920,7 @@ msgstr "Lyhyt kuvaus tästä sovelluksesta."
 #: ../menulibre/util.py:592
 #, python-format
 msgid "Unable to load desktop file due to the following error: %s"
-msgstr ""
+msgstr "Käynnistintiedostoa ei voitu ladata seuraavan virheen vuoksi: %s"
 
 #. Translators: This error is displayed when the first group in a
 #. failing desktop file is incorrect. "Start group" can be safely
@@ -925,28 +928,28 @@ msgstr ""
 #: ../menulibre/util.py:607
 #, python-format
 msgid "Start group is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "Ensimmäinen ryhmä on virheellinen - '%s', pitäisi olla '%s'"
 
 #. Translators: This error is displayed when a required key is
 #. missing in a failing desktop file.
 #: ../menulibre/util.py:617 ../menulibre/util.py:651
 #, python-format
 msgid "%s key not found"
-msgstr ""
+msgstr "Tietoa %s ei löytynyt"
 
 #. Translators: This error is displayed when a failing desktop file
 #. has an invalid value for the provided key.
 #: ../menulibre/util.py:622
 #, python-format
 msgid "%s value is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "Tieto %s on virheellinen - '%s', pitäisi olla '%s'"
 
 #. Translators: This error is displayed when a failing desktop
 #. file contains an invalid path to an executable file.
 #: ../menulibre/util.py:637 ../menulibre/util.py:655
 #, python-format
 msgid "%s program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "Sovellusta %s '%s' ei löytynyt PATH-määrittelystä"
 
 #. Translators: This error is displayed when a failing desktop
 #. file contains an invalid command to execute.
@@ -956,12 +959,14 @@ msgid ""
 "%s program '%s' is not a valid shell command according to "
 "GLib.shell_parse_argv, error: %s"
 msgstr ""
+"Sovellus %s '%s' ei ole kelvollinen komentorivikomento "
+"GLib.shell_parse_argv:n mukaan, virhe: %s"
 
 #. Translators: This error is displayed for a failing desktop file where
 #. errors were detected but the file seems otherwise valid.
 #: ../menulibre/util.py:664
 msgid "Unknown error. Desktop file appears to be are valid."
-msgstr ""
+msgstr "Tuntematon virhe. Käynnistintiedosto näyttäisi olevan kelvollinen."
 
 #~ msgid "Image File"
 #~ msgstr "Kuvatiedosto"
