--- a/po/sv.po
+++ b/po/sv.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2018-01-17 22:16+0000\n"
+"POT-Creation-Date: 2018-01-18 11:33+0000\n"
 "PO-Revision-Date: 2018-01-14 04:39+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-18 05:07+0000\n"
+"X-Launchpad-Export-Date: 2018-01-19 05:27+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 "Language: sv\n"
 
@@ -46,12 +46,12 @@ msgstr "Lägg till av_skiljare"
 #. Translators: Icon popup menu item to browse available icons.
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Browse Icons…"
-msgstr "Bläddra bland ikoner..."
+msgstr "Bläddra bland ikoner…"
 
 #. Translators: Icon popup menu item to browse files for an icon file.
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "Browse Files…"
-msgstr "Bläddra bland filer..."
+msgstr "Bläddra bland filer…"
 
 #. Translators: Toolbar button to save the currently selected item.
 #: ../data/ui/MenulibreWindow.ui.h:12
@@ -118,7 +118,7 @@ msgstr "Flytta ner"
 #. Translators: Treeview toolbar button to sort the currently open submenu alphabetically.
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Sort Alphabetically"
-msgstr ""
+msgstr "Sortera i bokstavsordning"
 
 #. Translators: Placeholder text/hint for the application name entry.
 #: ../data/ui/MenulibreWindow.ui.h:35
@@ -238,7 +238,7 @@ msgstr "Namn"
 #. Translators: Window title for the Select Icon dialog
 #: ../data/ui/MenulibreWindow.ui.h:74
 msgid "Select an icon…"
-msgstr "Välj en ikon..."
+msgstr "Välj en ikon…"
 
 #. Translators: Button to cancel and leave a dialog.
 #. Translators: Help Dialog, cancel button.
@@ -415,12 +415,12 @@ msgstr ""
 #. Translators: "Implements" text entry. A list of interfaces that this application implements.
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Implements"
-msgstr ""
+msgstr "Implementerar"
 
 #. Translators: Command line option to display debug messages on stdout
 #: ../menulibre/__init__.py:34
 msgid "Show debug messages"
-msgstr "Visa felrättningsmeddelanden"
+msgstr "Visa felsökningsmeddelanden"
 
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:38
@@ -549,7 +549,7 @@ msgstr "Det gick inte att hitta \"%s\" i din PATH."
 #: ../menulibre/Dialogs.py:231
 #, python-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "Misslyckades med att spara \"%s\"."
 
 #. Translators: Save Error Dialog, secondary text.
 #: ../menulibre/Dialogs.py:234
@@ -640,7 +640,7 @@ msgstr "GNOME-program"
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:78
 msgid "GTK+ application"
-msgstr "Gtk+ program"
+msgstr "GTK+-program"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:80
@@ -710,32 +710,32 @@ msgstr "Se <a href='%s'>online documentation</a> för mer information."
 #. Translators: Add Launcher action label
 #: ../menulibre/MenulibreApplication.py:389
 msgid "Add _Launcher…"
-msgstr "_Lägg till programstartare..."
+msgstr "_Lägg till programstartare…"
 
 #. Translators: Add Launcher action tooltip
 #: ../menulibre/MenulibreApplication.py:391
 msgid "Add Launcher…"
-msgstr "Lägg till programstartare..."
+msgstr "Lägg till programstartare…"
 
 #. Translators: Add Directory action label
 #: ../menulibre/MenulibreApplication.py:398
 msgid "Add _Directory…"
-msgstr "Lägg till _katalog..."
+msgstr "Lägg till _katalog…"
 
 #. Translators: Add Directory action tooltip
 #: ../menulibre/MenulibreApplication.py:400
 msgid "Add Directory…"
-msgstr "Lägg till katalog..."
+msgstr "Lägg till katalog…"
 
 #. Translators: Add Separator action label
 #: ../menulibre/MenulibreApplication.py:407
 msgid "_Add Separator…"
-msgstr "Lägg till _avskiljare..."
+msgstr "Lägg till _avskiljare…"
 
 #. Translators: Add Separator action tooltip
 #: ../menulibre/MenulibreApplication.py:409
 msgid "Add Separator…"
-msgstr "Lägg till avskiljare..."
+msgstr "Lägg till avskiljare…"
 
 #. Translators: Save Launcher action label
 #: ../menulibre/MenulibreApplication.py:416
@@ -849,12 +849,12 @@ msgstr "Ny genväg"
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1129
 msgid "Select a working directory…"
-msgstr "Välj en arbetskatalog"
+msgstr "Välj en arbetskatalog…"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1133
 msgid "Select an executable…"
-msgstr "Välj en körbar fil..."
+msgstr "Välj en körbar fil…"
 
 #. Translators: This error is displayed when the user does not
 #. have sufficient file system permissions to delete the
@@ -893,7 +893,7 @@ msgstr ""
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreIconSelection.py:78
 msgid "Select an image…"
-msgstr ""
+msgstr "Välj en bild…"
 
 #. Translators: "Images" file chooser dialog filter
 #: ../menulibre/MenulibreIconSelection.py:87
