--- a/po/tr.po
+++ b/po/tr.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2018-01-18 11:33+0000\n"
-"PO-Revision-Date: 2018-01-19 04:57+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2018-01-17 15:22-0500\n"
+"PO-Revision-Date: 2018-01-19 05:17+0000\n"
+"Last-Translator: alorak <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-19 05:27+0000\n"
+"X-Launchpad-Export-Date: 2018-01-19 05:32+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 
 #: ../menulibre.desktop.in.h:1
