--- a/po/tr.po
+++ b/po/tr.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2018-01-17 15:22-0500\n"
-"PO-Revision-Date: 2018-01-19 05:17+0000\n"
+"POT-Creation-Date: 2018-01-19 05:33+0000\n"
+"PO-Revision-Date: 2018-01-19 04:57+0000\n"
 "Last-Translator: alorak <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-19 05:32+0000\n"
+"X-Launchpad-Export-Date: 2018-01-20 05:28+0000\n"
 "X-Generator: Launchpad (build 18532)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -162,6 +162,7 @@ msgstr "Uygulama Detayları"
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
+"'Doğru' olarak ayarlanırsa, program bir terminal penceresinde çalıştırılır."
 
 #. Translators: "Terminal" on/off switch. When enabled, the application is executed in a terminal window.
 #: ../data/ui/MenulibreWindow.ui.h:52
@@ -174,6 +175,8 @@ msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
+"'Doğru' olarak ayarlanırsa, bir başlatma bildirimi gönderilir. Genellikle, "
+"uygulama başlatıldığında meşgul bir imleç gösterilir."
 
 #. Translators: "StartupNotify" on/off switch. When enabled, a busy cursor is shown while the application launches.
 #: ../data/ui/MenulibreWindow.ui.h:56
@@ -186,6 +189,8 @@ msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
 msgstr ""
+"'Doğru' olarak ayarlanırsa, bu girdi menülerde gösterilmez, ancak MIME türü "
+"dernekleri için kullanılabilir."
 
 #. Translators: "NoDisplay" on/off switch. When enabled, the application will not be shown in menus, but will be available for MIME type associations etc.
 #: ../data/ui/MenulibreWindow.ui.h:60
@@ -311,7 +316,7 @@ msgstr ""
 #. Translators: "TryExec" text entry. Path to an executable file to determine if the program is installed.
 #: ../data/ui/MenulibreWindow.ui.h:101
 msgid "Try Exec"
-msgstr ""
+msgstr "Çalıştırmayı Dene"
 
 #. Translators: Tooltip for the "Mimetypes" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:103
@@ -330,6 +335,9 @@ msgid ""
 "searching entries. These are not meant for display, and should not be "
 "redundant with the values of Name or GenericName."
 msgstr ""
+"Bu girişi tanımlamak için anahtar kelimelerin bir listesi. Bunları girdileri "
+"aramaya yardımcı olmak için kullanabilirsiniz. Bunlar görüntüleme amaçlı "
+"değildir ve Name veya GenericName değerleriyle gereksiz olmamalıdır."
 
 #. Translators: "Keywords" text entry. A list of keywords to describe this entry.
 #: ../data/ui/MenulibreWindow.ui.h:109
@@ -346,7 +354,7 @@ msgstr ""
 #. Translators: "StartupWMClass" text entry. A window manager hint for the application
 #: ../data/ui/MenulibreWindow.ui.h:113
 msgid "Startup WM Class"
-msgstr ""
+msgstr "Başlangıç ​​WM Sınıfı"
 
 #. Translators: Tooltip for the "Hidden" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:115
@@ -354,6 +362,8 @@ msgid ""
 "If set to \"True\", the result for the user is equivalent to the .desktop "
 "file not existing at all."
 msgstr ""
+"'Doğru' olarak ayarlanırsa, kullanıcı için sonuç hiç bulunmayan .desktop "
+"dosyasına eşdeğerdir."
 
 #. Translators: "Hidden" on/off switch. When enabled, the application is hidden from the menu.
 #: ../data/ui/MenulibreWindow.ui.h:117
@@ -494,7 +504,7 @@ msgstr "Tamam"
 #. the selected application is no longer installed.
 #: ../menulibre/Dialogs.py:197
 msgid "No Longer Installed"
-msgstr ""
+msgstr "Yüklenmemiş"
 
 #. Translators: Launcher Removed Dialog, secondary text.
 #: ../menulibre/Dialogs.py:199
@@ -856,7 +866,7 @@ msgstr "\"%s\" silmek istediğinize emin misiniz?"
 #. Translators: Menu item to open the Parsing Errors dialog.
 #: ../menulibre/MenulibreApplication.py:2193
 msgid "Parsing Error Log"
-msgstr ""
+msgstr "Parsing Hata Kaydı"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreIconSelection.py:78
@@ -888,7 +898,7 @@ msgstr "Bu uygulama hakkında küçük bir tanımlayıcı içerik."
 #: ../menulibre/util.py:592
 #, python-format
 msgid "Unable to load desktop file due to the following error: %s"
-msgstr ""
+msgstr "Aşağıdaki hata yüzünden masaüstü dosyası yüklenemiyor: %s"
 
 #. Translators: This error is displayed when the first group in a
 #. failing desktop file is incorrect. "Start group" can be safely
@@ -896,7 +906,7 @@ msgstr ""
 #: ../menulibre/util.py:607
 #, python-format
 msgid "Start group is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "Başlangıç ​​grubu geçersiz - şu anda '%s', fakat '%s' olmalıdır"
 
 #. Translators: This error is displayed when a required key is
 #. missing in a failing desktop file.
@@ -910,14 +920,14 @@ msgstr "%s anahtarı bulunamadı"
 #: ../menulibre/util.py:622
 #, python-format
 msgid "%s value is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "%s değeri geçersiz - şu anda '%s', fakat '%s' olmalı"
 
 #. Translators: This error is displayed when a failing desktop
 #. file contains an invalid path to an executable file.
 #: ../menulibre/util.py:637 ../menulibre/util.py:655
 #, python-format
 msgid "%s program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s programı '%s' YOL'unda bulunamadı"
 
 #. Translators: This error is displayed when a failing desktop
 #. file contains an invalid command to execute.
