--- a/po/gl.po
+++ b/po/gl.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2018-01-27 05:30+0000\n"
+"POT-Creation-Date: 2018-01-28 05:27+0000\n"
 "PO-Revision-Date: 2018-01-14 04:39+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-28 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-29 05:29+0000\n"
 "X-Generator: Launchpad (build 18534)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -115,7 +115,7 @@ msgstr "Mover abaixo"
 #. Translators: Treeview toolbar button to sort the currently open submenu alphabetically.
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Sort Alphabetically"
-msgstr ""
+msgstr "Ordenar alfabeticamente"
 
 #. Translators: Placeholder text/hint for the application name entry.
 #: ../data/ui/MenulibreWindow.ui.h:35
@@ -414,7 +414,7 @@ msgstr ""
 #. Translators: "Implements" text entry. A list of interfaces that this application implements.
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Implements"
-msgstr ""
+msgstr "Implementa"
 
 #. Translators: Command line option to display debug messages on stdout
 #: ../menulibre/__init__.py:34
@@ -963,7 +963,7 @@ msgstr ""
 #. errors were detected but the file seems otherwise valid.
 #: ../menulibre/util.py:664
 msgid "Unknown error. Desktop file appears to be are valid."
-msgstr ""
+msgstr "Produciuse un erro descoñecido. O ficheiro Desktop parece válido."
 
 #~ msgid "<b>Options</b>"
 #~ msgstr "<b>Opcións</b>"
