--- a/po/ca.po
+++ b/po/ca.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-01 06:41-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
+"POT-Creation-Date: 2018-02-01 23:39+0000\n"
+"PO-Revision-Date: 2018-02-01 13:24+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
-"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-01 05:30+0000\n"
-"X-Generator: Launchpad (build 18534)\n"
+"X-Launchpad-Export-Date: 2018-02-02 05:27+0000\n"
+"X-Generator: Launchpad (build 18544)\n"
+"Language: ca\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -400,8 +400,8 @@ msgid ""
 msgstr ""
 "Definiu aquesta clau com a «true» si l'activació per D-Bus és compatible amb "
 "aquesta aplicació i voleu utilitzar-la.\n"
-"Vegeu http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07."
-"html per a més informació."
+"Vegeu http://standards.freedesktop.org/desktop-entry-"
+"spec/latest/ar01s07.html per a més informació."
 
 #. Translators: "DBusActivatable" on/off switch. When enabled, the application is said to be activated via DBUS.
 #: ../data/ui/MenulibreWindow.ui.h:122
@@ -966,8 +966,8 @@ msgstr ""
 #: ../menulibre/util.py:667 ../menulibre/util.py:683
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to GLib."
-"shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to "
+"GLib.shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -975,31 +975,6 @@ msgstr ""
 #: ../menulibre/util.py:689
 msgid "Unknown error. Desktop file appears to be are valid."
 msgstr ""
-
-#~ msgid ""
-#~ "A list of environments that should not display this entry. You can only "
-#~ "use this key if \"OnlyShowIn\" is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Llista dels entorns d'escriptori que no han de mostrar aquesta entrada "
-#~ "del menú. Aquesta clau només es pot utilitzar si «Mostra només en» no "
-#~ "està definida.\n"
-#~ "Entre els valors possibles s'inclouen: Cinnamon, EDE, GNOME, KDE, LXDE, "
-#~ "LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
-
-#~ msgid ""
-#~ "A list of environments that should display this entry. Other environments "
-#~ "will not display this entry. You can only use this key if \"NotShowIn\" "
-#~ "is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Llista dels entorns d'escriptori que han de mostrar aquesta entrada de "
-#~ "menú. Els altres entorns no mostraran aquesta entrada. Aquesta clau només "
-#~ "es pot utilitzar si «No mostris en» no està definida.\n"
-#~ "Entre els valors possibles s'inclouen: Cinnamon, EDE, GNOME, KDE, LXDE, "
-#~ "LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
 
 #~ msgid "Icon Name"
 #~ msgstr "Nom de la icona"
