--- a/po/gl.po
+++ b/po/gl.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-01 06:41-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2018-02-01 23:39+0000\n"
+"PO-Revision-Date: 2018-02-01 13:24+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
-"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-01 05:30+0000\n"
-"X-Generator: Launchpad (build 18534)\n"
+"X-Launchpad-Export-Date: 2018-02-02 05:27+0000\n"
+"X-Generator: Launchpad (build 18544)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -270,6 +269,9 @@ msgid ""
 "and will therefore not show up in MenuLibre.\n"
 "Please investigate these problems with the associated package maintainer."
 msgstr ""
+"Os seguintes ficheiros desktop non foron analizados pola biblioteca "
+"subxacente e polo tanto non se mostrarán no MenuLibre.\n"
+"Investigue este problema co mantedor do paquete asociado."
 
 #. Translators: Tooltip for the "GenericName" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:85
@@ -426,11 +428,13 @@ msgstr "Mostrar as mensaxes de depuración"
 #: ../menulibre/__init__.py:38
 msgid "Use headerbar layout (client side decorations)"
 msgstr ""
+"Usar disposición da barra de cabeceira (decoracións da parte do cliente)"
 
 #. Translators: Command line option to switch layout
 #: ../menulibre/__init__.py:43
 msgid "Use toolbar layout (server side decorations)"
 msgstr ""
+"Usar disposición da barra de ferramentas (decoracións da parte do servidor)"
 
 #. Translators: About Dialog, window title.
 #: ../menulibre/Dialogs.py:37
@@ -883,7 +887,7 @@ msgstr "Novo directorio"
 #. description.
 #: ../menulibre/MenulibreApplication.py:1661
 msgid "A small descriptive blurb about this directory."
-msgstr ""
+msgstr "Unha pequena descrición deste cartafol."
 
 #. Translators: Confirmation dialog to delete the selected
 #. separator.
@@ -929,6 +933,7 @@ msgstr "Novo elemento do menú"
 #, python-format
 msgid "Unable to load desktop file due to the following error: %s"
 msgstr ""
+"Non foi posíbel cargar o ficheiro desktop debido ao seguinte erro: %s"
 
 #. Translators: This error is displayed when the first group in a
 #. failing desktop file is incorrect. "Start group" can be safely
@@ -964,8 +969,8 @@ msgstr ""
 #: ../menulibre/util.py:667 ../menulibre/util.py:683
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to GLib."
-"shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to "
+"GLib.shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -973,30 +978,6 @@ msgstr ""
 #: ../menulibre/util.py:689
 msgid "Unknown error. Desktop file appears to be are valid."
 msgstr "Produciuse un erro descoñecido. O ficheiro Desktop parece válido."
-
-#~ msgid ""
-#~ "A list of environments that should not display this entry. You can only "
-#~ "use this key if \"OnlyShowIn\" is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Lista de contornos que non deberían mostrar esta entrada. Só pode usar "
-#~ "esta clave se «OnlyShowIn» non está estabelecido.\n"
-#~ "Os valores posibeis inclúen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-
-#~ msgid ""
-#~ "A list of environments that should display this entry. Other environments "
-#~ "will not display this entry. You can only use this key if \"NotShowIn\" "
-#~ "is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Lista de contornos que deberían mostrar esta entrada. Outros contornos "
-#~ "non mostrarán esta entrada. Só pode usar esta clave se «OnlyShowIn» non "
-#~ "está estabelecido.\n"
-#~ "Os valores posibeis inclúen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #~ msgid "<b>Options</b>"
 #~ msgstr "<b>Opcións</b>"
