--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-01 06:41-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
+"POT-Creation-Date: 2018-02-01 23:39+0000\n"
+"PO-Revision-Date: 2018-02-01 13:24+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
-"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-01 05:31+0000\n"
-"X-Generator: Launchpad (build 18534)\n"
+"X-Launchpad-Export-Date: 2018-02-02 05:27+0000\n"
+"X-Generator: Launchpad (build 18544)\n"
+"Language: pt_BR\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -937,8 +937,8 @@ msgstr ""
 #: ../menulibre/util.py:667 ../menulibre/util.py:683
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to GLib."
-"shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to "
+"GLib.shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -946,30 +946,6 @@ msgstr ""
 #: ../menulibre/util.py:689
 msgid "Unknown error. Desktop file appears to be are valid."
 msgstr ""
-
-#~ msgid ""
-#~ "A list of environments that should not display this entry. You can only "
-#~ "use this key if \"OnlyShowIn\" is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Uma lista de ambientes que não pode ser mostrados nessa entrada. Você "
-#~ "pode usar somente essa chave se \"OnlyShowIn\" não estiver selecionado.\n"
-#~ "Possíveis valores incluem: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-
-#~ msgid ""
-#~ "A list of environments that should display this entry. Other environments "
-#~ "will not display this entry. You can only use this key if \"NotShowIn\" "
-#~ "is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Uma lista de ambientes que podem ser mostrados nessa entrada. Outros "
-#~ "ambientes que não podem ser mostrados nessa entrada. Você só pode usar "
-#~ "essa chave se \"NotShowIn\" não está selecionado.\n"
-#~ "Possíveis valores incluem: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #~ msgid "Image File"
 #~ msgstr "Arquivo de Imagem"
