--- a/po/sk.po
+++ b/po/sk.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-01 06:41-0500\n"
-"PO-Revision-Date: 2018-01-14 04:39+0000\n"
+"POT-Creation-Date: 2018-02-01 23:39+0000\n"
+"PO-Revision-Date: 2018-02-01 13:24+0000\n"
 "Last-Translator: Dusan Kazik <prescott66@gmail.com>\n"
 "Language-Team: Slovak <sk@li.org>\n"
-"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-01 05:31+0000\n"
-"X-Generator: Launchpad (build 18534)\n"
+"X-Launchpad-Export-Date: 2018-02-02 05:27+0000\n"
+"X-Generator: Launchpad (build 18544)\n"
+"Language: sk\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -141,8 +141,9 @@ msgstr ""
 "Program na spustenie s argumentami. Tento kľúč je požadovaný, ak voľba "
 "DBusActivatable nie je nastavená na „True“, alebo ak potrebujete mať "
 "kompatibilitu s implementáciami, ktoré nerozumejú aktivácii zbernice D-Bus.\n"
-"Pre zoznam podporovaných argumentov si prezrite http://standards.freedesktop."
-"org/desktop-entry-spec/desktop-entry-spec-latest.html#exec-variables."
+"Pre zoznam podporovaných argumentov si prezrite "
+"http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables."
 
 #. Translators: Treeview column for an action item
 #: ../data/ui/MenulibreWindow.ui.h:42
@@ -396,8 +397,8 @@ msgid ""
 msgstr ""
 "Nastavte tento kľúč na „True“, ak aplikácia podporuje aktiváciu "
 "prostredníctvom zbernice D-Bus a chcete ju použiť.\n"
-"Pre viac informácií navštívte adresu http://standards.freedesktop.org/"
-"desktop-entry-spec/latest/ar01s07.html."
+"Pre viac informácií navštívte adresu "
+"http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html."
 
 #. Translators: "DBusActivatable" on/off switch. When enabled, the application is said to be activated via DBUS.
 #: ../data/ui/MenulibreWindow.ui.h:122
@@ -961,8 +962,8 @@ msgstr ""
 #: ../menulibre/util.py:667 ../menulibre/util.py:683
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to GLib."
-"shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to "
+"GLib.shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
@@ -970,30 +971,6 @@ msgstr ""
 #: ../menulibre/util.py:689
 msgid "Unknown error. Desktop file appears to be are valid."
 msgstr ""
-
-#~ msgid ""
-#~ "A list of environments that should not display this entry. You can only "
-#~ "use this key if \"OnlyShowIn\" is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Zoznam prostredí, ktoré nezobrazia tento záznam. Môžete použiť tento kľúč "
-#~ "iba vtedy, ak nie je nastavená voľba „OnlyShowIn“.\n"
-#~ "Použiteľné hodnoty sú: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-
-#~ msgid ""
-#~ "A list of environments that should display this entry. Other environments "
-#~ "will not display this entry. You can only use this key if \"NotShowIn\" "
-#~ "is not set.\n"
-#~ "Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
-#~ msgstr ""
-#~ "Zoznam prostredí, ktoré zobrazia tento záznam. Iné prostredia tento "
-#~ "záznam nezobrazia. Môžete použiť tento kľúč iba vtedy, ak nie je "
-#~ "nastavená voľba „NotShowIn“.\n"
-#~ "Použiteľné hodnoty sú: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, "
-#~ "Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #~ msgid "MenuLibre"
 #~ msgstr "MenuLibre"
@@ -1050,8 +1027,7 @@ msgstr ""
 #~ msgstr "Výber spustiteľného súboru..."
 
 #~ msgid "Cannot add subdirectories to preinstalled system paths."
-#~ msgstr ""
-#~ "Nedajú sa pridať podadresáre do predinštalovaných systémových ciest."
+#~ msgstr "Nedajú sa pridať podadresáre do predinštalovaných systémových ciest."
 
 #~ msgid "Select an image"
 #~ msgstr "Výber obrázku"
