--- a/po/tr.po
+++ b/po/tr.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-01 06:41-0500\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2018-02-01 23:39+0000\n"
 "PO-Revision-Date: 2018-01-19 04:57+0000\n"
 "Last-Translator: alorak <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
-"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-01 05:31+0000\n"
-"X-Generator: Launchpad (build 18534)\n"
+"X-Launchpad-Export-Date: 2018-02-02 05:27+0000\n"
+"X-Generator: Launchpad (build 18544)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -943,8 +942,8 @@ msgstr "%s programı '%s' YOL'unda bulunamadı"
 #: ../menulibre/util.py:667 ../menulibre/util.py:683
 #, python-format
 msgid ""
-"%s program '%s' is not a valid shell command according to GLib."
-"shell_parse_argv, error: %s"
+"%s program '%s' is not a valid shell command according to "
+"GLib.shell_parse_argv, error: %s"
 msgstr ""
 
 #. Translators: This error is displayed for a failing desktop file where
