--- a/po/da.po
+++ b/po/da.po
@@ -6,14 +6,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-05 06:19-0500\n"
+"POT-Creation-Date: 2018-02-06 05:38+0000\n"
 "PO-Revision-Date: 2018-02-02 00:45+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-06 05:36+0000\n"
+"X-Launchpad-Export-Date: 2018-02-07 05:27+0000\n"
 "X-Generator: Launchpad (build 18544)\n"
 "Language: da\n"
 
@@ -377,7 +377,7 @@ msgstr "Opstarts WM-klasse"
 #. Translators: Identify Window Dialog, primary text.
 #: ../data/ui/MenulibreWindow.ui.h:114 ../menulibre/Dialogs.py:251
 msgid "Identify Window"
-msgstr ""
+msgstr "Identificer vindue"
 
 #. Translators: Tooltip for the "Hidden" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:116
@@ -546,7 +546,7 @@ msgstr ""
 #: ../menulibre/Dialogs.py:214
 #, python-format
 msgid "Could not find \"%s\" in your PATH."
-msgstr "Kan ikke finde \"%s\" i din PATH."
+msgstr "Kunne ikke finde \"%s\" i din PATH."
 
 #. Translators: Save Error Dialog, primary text.
 #: ../menulibre/Dialogs.py:232
@@ -564,7 +564,7 @@ msgstr "Har du skrivetilladelser til filen og mappen?"
 #: ../menulibre/Dialogs.py:254
 #, python-format
 msgid "Click on the main application window for '%s'."
-msgstr ""
+msgstr "Klik på hovedprogrammets vindue for '%s'."
 
 #. Translators: Separator menu item
 #: ../menulibre/MenuEditor.py:91 ../menulibre/MenulibreApplication.py:1212
@@ -894,7 +894,7 @@ msgstr "Ny mappe"
 #. description.
 #: ../menulibre/MenulibreApplication.py:1679
 msgid "A small descriptive blurb about this directory."
-msgstr ""
+msgstr "En kort beskrivende tekstbid om mappen."
 
 #. Translators: Confirmation dialog to delete the selected
 #. separator.
